@@ -1,6 +1,9 @@
 0.9.0
 -----
 
+* Column.data_type is now a property. (#247)
+* Table[Set].get_column_types() is now the Table[Set].column_types property. (#247)
+* Table[Set].get_column_names() is now the Table[Set].column_names property. (#247)
 * Table.pretty_print now displays consistent decimal places for each Number column.
 * Discrete data types (Number, Date etc) are now right-aligned in Table.pretty_print.
 * Implement aggregation result caching. (#245)
